--- a/Koting/Koting/View/Base.lproj/Main.storyboard
+++ b/Koting/Koting/View/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EJp-pA-Hcb">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -16,14 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DongMadame" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LNe-jZ-qmj">
-                                <rect key="frame" x="0.0" y="194" width="375" height="72"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="60"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GT8-Ux-cYz">
-                                <rect key="frame" x="57.5" y="417" width="260" height="50"/>
+                                <rect key="frame" x="57.5" y="494" width="260" height="50"/>
                                 <color key="backgroundColor" red="0.99607843137254903" green="0.49411764705882355" blue="0.20784313725490194" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="260" id="HBW-YU-Qfe"/>
@@ -37,15 +32,21 @@
                                     <action selector="startButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Nfr-O5-bY6"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mainIMG" translatesAutoresizingMaskIntoConstraints="NO" id="YmF-4A-MGz">
+                                <rect key="frame" x="137.5" y="194" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="ZhH-ae-5Qo"/>
+                                    <constraint firstAttribute="height" constant="100" id="yJN-BW-Nk9"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="LNe-jZ-qmj" secondAttribute="trailing" id="3gL-iz-agC"/>
+                            <constraint firstItem="YmF-4A-MGz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4vO-0o-HyY"/>
+                            <constraint firstItem="YmF-4A-MGz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="FvY-1J-o5b"/>
+                            <constraint firstItem="GT8-Ux-cYz" firstAttribute="top" secondItem="YmF-4A-MGz" secondAttribute="bottom" constant="200" id="RMn-vD-biA"/>
                             <constraint firstItem="GT8-Ux-cYz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VFu-2m-hA9"/>
-                            <constraint firstItem="LNe-jZ-qmj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="b5E-cN-iSW"/>
-                            <constraint firstItem="LNe-jZ-qmj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="mLC-Aj-vbj"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="GT8-Ux-cYz" secondAttribute="bottom" constant="200" id="qEE-Wj-jyg"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="jkb-he-wzJ"/>
@@ -672,6 +673,7 @@
     </scenes>
     <resources>
         <image name="defaultProfile" width="256" height="256"/>
+        <image name="mainIMG" width="648" height="477"/>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
