코팅 -> 동마담 이름 변경, 아이콘, 색상 변경

--- a/api-server/demo/src/main/resources/static/css/me.css
+++ b/api-server/demo/src/main/resources/static/css/me.css
@@ -100,7 +100,7 @@ body {
   width: 500px;
   height: 100px;
   /* background: rgb(23,168,254); */
-  background: #5D11F7;
+  background: #FE7E36;
 }
 
 .box > div {
