--- a/api-server/demo/src/main/resources/templates/index.html
+++ b/api-server/demo/src/main/resources/templates/index.html
@@ -6,10 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 	<!-- SEO -->
-	<title> 미팅이 필요한 모든 순간, 코팅 </title>
+	<title> 동국대의 온라인 만해광장, 동마담 </title>
 
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" href="../static/images/koting_icon.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="../static/images/DMD.png" sizes="32x32">
 
 	<!-- Styles -->
 	<link rel='stylesheet' href='../static/css/me.css' type='text/css' media='screen' />
@@ -26,16 +26,16 @@
 <div class="fs-me">
 	<div class="me-content">
 		<div class="bio" style="font-weight: 700; font-size: 45pt; top: 40%; left: 40%; position: absolute;">
-			<p style="margin-bottom: 15px">미팅이 필요한</p>
-			<p>모든 순간, <strong style="color: #5D11F7;">코팅</strong></p>
+			<p style="margin-bottom: 15px">동국대의 온라인</p>
+			<p>만해광장, <strong style="color: #FE7E36;">동마담</strong></p>
 		</div>
 
 		<div class="box">
 			<div style="font-size: 22px">
-				<a href="https://github.com/team-bB" target="_blank"> 코팅 앱 다운로드  </a>
+				<a href="https://github.com/team-bB" target="_blank"> 동마담 앱 다운로드  </a>
 			</div>
 		</div>
-
+	</div>
 </div>
 
 </body>
