이용약관 추가

--- a/Koting/Koting/Controller/MyInfo/MyInfoHeaderVC.xib
+++ b/Koting/Koting/Controller/MyInfo/MyInfoHeaderVC.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -48,12 +49,12 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="4Wt-ld-mw8">
-                            <rect key="frame" x="20" y="70" width="180" height="44"/>
+                            <rect key="frame" x="20" y="70" width="200" height="44"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="국어문예창작학과 | 공룡상" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6F-cA-Was">
-                                    <rect key="frame" x="0.0" y="0.0" width="180" height="18"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="미디어커뮤니이션전공 | ESTJ" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6F-cA-Was">
+                                    <rect key="frame" x="0.0" y="0.0" width="200" height="18"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="180" id="Iie-xY-w3O"/>
+                                        <constraint firstAttribute="width" constant="200" id="Iie-xY-w3O"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <nil key="textColor"/>
