--- a/Koting/Koting/View/ChatStoryboard.storyboard
+++ b/Koting/Koting/View/ChatStoryboard.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bY2-CH-fJA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bY2-CH-fJA">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -134,21 +134,40 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lMA-ri-hlz">
-                                <rect key="frame" x="127.5" y="114" width="120" height="40"/>
-                                <color key="backgroundColor" systemColor="systemRedColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="KQB-1q-p1R"/>
-                                    <constraint firstAttribute="width" constant="120" id="ZYI-2M-e9M"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="14"/>
-                                <state key="normal" title="신고하기">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="reportButtonTapped:" destination="bzR-7g-thx" eventType="touchUpInside" id="vjM-ol-H9f"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="0qU-2Z-VjB">
+                                <rect key="frame" x="102.5" y="122" width="170" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EdK-fo-fME">
+                                        <rect key="frame" x="0.0" y="0.0" width="80" height="30"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="4DH-90-EWH"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" title="차단하기">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="blockButtonTapped:" destination="bzR-7g-thx" eventType="touchUpInside" id="kDv-UU-isc"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lMA-ri-hlz">
+                                        <rect key="frame" x="90" y="0.0" width="80" height="30"/>
+                                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="KQB-1q-p1R"/>
+                                            <constraint firstAttribute="width" constant="80" id="ZYI-2M-e9M"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="14"/>
+                                        <state key="normal" title="신고하기">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="reportButtonTapped:" destination="bzR-7g-thx" eventType="touchUpInside" id="vjM-ol-H9f"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="qby-7y-2VG"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -156,17 +175,18 @@
                             <constraint firstItem="XT6-jf-f90" firstAttribute="centerX" secondItem="0Qt-Tq-frt" secondAttribute="centerX" constant="-104" id="3pm-BK-tD0"/>
                             <constraint firstItem="1Xh-xP-Bqp" firstAttribute="top" secondItem="qby-7y-2VG" secondAttribute="top" constant="38" id="9Ov-cN-c2q"/>
                             <constraint firstItem="1Xh-xP-Bqp" firstAttribute="centerX" secondItem="0Qt-Tq-frt" secondAttribute="centerX" constant="5" id="GHL-BT-3Ic"/>
-                            <constraint firstItem="lMA-ri-hlz" firstAttribute="top" secondItem="1Xh-xP-Bqp" secondAttribute="bottom" constant="23" id="HN6-QI-vLC"/>
+                            <constraint firstItem="0qU-2Z-VjB" firstAttribute="top" secondItem="XT6-jf-f90" secondAttribute="bottom" constant="20" id="J6U-YI-aPy"/>
                             <constraint firstItem="Roj-z2-dPc" firstAttribute="leading" secondItem="1Xh-xP-Bqp" secondAttribute="trailing" constant="9" id="R0C-Qy-9zy"/>
                             <constraint firstItem="XT6-jf-f90" firstAttribute="top" secondItem="qby-7y-2VG" secondAttribute="top" constant="87" id="Tcd-Fy-89y"/>
                             <constraint firstItem="Roj-z2-dPc" firstAttribute="top" secondItem="qby-7y-2VG" secondAttribute="top" constant="38" id="WOm-Ma-LpE"/>
                             <constraint firstItem="1Xh-xP-Bqp" firstAttribute="leading" secondItem="hkR-Uk-L56" secondAttribute="trailing" constant="14" id="aIL-Ds-Uxe"/>
                             <constraint firstItem="hkR-Uk-L56" firstAttribute="top" secondItem="qby-7y-2VG" secondAttribute="top" constant="20" id="jrQ-w1-Uij"/>
-                            <constraint firstItem="lMA-ri-hlz" firstAttribute="centerX" secondItem="0Qt-Tq-frt" secondAttribute="centerX" id="tGc-fD-Vhx"/>
+                            <constraint firstItem="0qU-2Z-VjB" firstAttribute="centerX" secondItem="0Qt-Tq-frt" secondAttribute="centerX" id="zb9-jf-8Hh"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="ageLabel" destination="Bhf-zD-g6s" id="zE3-2e-kN8"/>
+                        <outlet property="blockButton" destination="EdK-fo-fME" id="zBH-De-tZI"/>
                         <outlet property="collegeLabel" destination="Zic-4q-uTH" id="cju-GB-ooT"/>
                         <outlet property="heightLabel" destination="a7t-rc-7tH" id="xc3-CI-myB"/>
                         <outlet property="imageView" destination="hkR-Uk-L56" id="qDd-K4-DFr"/>
